Running with HDFS

--- a/config/parameter_bfast_template.properties
+++ b/config/parameter_bfast_template.properties
@@ -1,6 +1,6 @@
-bfast_script_files=/home/savio/workspace/remote_sensing_pipeline/files/bfast_luis_wavelet_java.r;/home/savio/workspace/remote_sensing_pipeline/files/bfast_luis_java.r;/home/savio/workspace/remote_sensing_pipeline/files/new_bfast_java.r;/home/savio/workspace/remote_sensing_pipeline/files/new_bfast_wavelet_java.r
+bfast_script_files=hdfs://namenode:9000/remote_sensing/bfast_luis_wavelet_java.r;hdfs://namenode:9000/remote_sensing/bfast_luis_java.r;hdfs://namenode:9000/remote_sensing/new_bfast_java.r;hdfs://namenode:9000/remote_sensing/new_bfast_wavelet_java.r
 
-kafka_servers=localhost:9092
-input_topic=bfast-8
+kafka_servers=172.16.137.180:9092
+input_topic=bfast
 output_topic=out
 
