--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 	<properties>
 		<log4j2-version>2.8.2</log4j2-version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<flink.version>1.2-SNAPSHOT</flink.version>
+		<flink.version>1.2.0</flink.version>
 		<protobuf.version>3.0.0</protobuf.version>
 		<protobufmaven.version>0.5.0</protobufmaven.version>
 		<flinkconnect.version>0.10_2.10</flinkconnect.version>
